--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "ioredis": "^5.4.2",
     "mysql2": "^2.2.5",
     "redis": "^4.0.0",
     "socket.io": "^4.0.0",
@@ -16,7 +18,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/ioredis": "^4.28.10",
     "@types/node": "^16.0.0",
+    "@types/redis": "^4.0.10",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
